tests/testcases/valid/semantic/test_empty_union.ciel
// Test empty union
union EmptyUnion {
};

union AnotherEmptyUnion {
};

struct StructWithEmptyUnion {
    union EmptyUnion u;
    int value;
};

int main() {
    union EmptyUnion u1;
    union AnotherEmptyUnion u2;
    struct StructWithEmptyUnion s;
    s.value = 100;
    return 0;
}
