tests/testcases/invalid/09_bad_hex_escape_in_string.ciel
fn main() -> int {
    char* s = "\xz"; // bad hex escape
    return 0;
}
